--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Game of life</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="min-w-screen w-fit bg-gray-300 min-h-screen h-fit"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
